# timbers

./: .gitignore  README.md  pyproject.toml
docs/: method.md
examples/: compare_bers.py  run_risk.py  run_toy.py  toy_power.py
scripts/: download_natural_earth.py
tests/: test_end_to_end.py  test_units.py
timbers/: __init__.py  cmaes.py  era5.py  fitness.py  geo.py  land.py  model.py  optimizer.py  polish.py  risk.py  scoring.py  solve.py
