[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "timbers"
version = "0.1.0"
description = "TiMBERS: Time-Modulated Bézier Evolve and Refine Strategy — GPU weather routing with joint geometry + speed optimization"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "freol35241" }]
requires-python = ">=3.10"
dependencies = [
    "jax",
    "numpy",
    "netCDF4",
    "shapely>=2.0",
]

[project.optional-dependencies]
gpu = ["jax[cuda12]"]

[tool.setuptools]
packages = ["timbers"]
